lintian-brush (0.145) UNRELEASED; urgency=medium

  * unused-build-dependency-on-cdbs: Cope with missing Build-Depends.
    Closes: #1026052

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 13 Dec 2022 20:44:32 +0000

lintian-brush (0.144) unstable; urgency=medium

  * Track site as well.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 11 Dec 2022 09:35:50 +0000

lintian-brush (0.143) unstable; urgency=medium

  * Fix info format fixers for groff-message.
  * Fix spelling error match.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 10 Dec 2022 01:48:54 +0000

lintian-brush (0.142) unstable; urgency=medium

  [ Jelmer Vernooĳ ]
  * Handle missing candidates.
  * Update vim_addon alias; see https://salsa.debian.org/lintian/lintian/-/merge_requests/433
  * Various watch fixes.
  * More watch fixer fixes.
  * Add another possible pattern.
  * Fix style.

  [ Jelmer Vernooij ]
  * Add fix for privacy-breach-google-adsense

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 09 Dec 2022 05:23:33 +0000

lintian-brush (0.141) unstable; urgency=medium

  * Allow removed files.
  * Reformat.
  * Fix repeated-path-segment.
  * Update SPDX license data
  * Update list of fixers in README.md
  * Update key package versions
  * Factor out probe_signature.
  * Lock write.
  * Support generating watch files for Launchpad.
  * Use common _load_json.
  * Error out when there are no candidates.
  * Split out repo URL.
  * Allow reformatting when rewriting.
  * Handle symlink-is-self-recursive

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 08 Dec 2022 12:55:50 +0000

lintian-brush (0.140) unstable; urgency=medium

  * Fix up override info for jar-not-in-usr-share, package-installs-java-
    bytecode, debconf-is-not-a-registry, unused-debconf-template,
    apache2-reverse-dependency-calls-invoke-rc.d.
  * Only remove get-orig-source target in package-only trees in
    opinionated mode.
  * deb-scrub-obsolete: Don't treat Breaks as a Dependency field.
  * Add fixer for application-in-library-section.